--- a/openHASP-configs/HomeAssistant/openhasp_configs/upbath.yaml
+++ b/openHASP-configs/HomeAssistant/openhasp_configs/upbath.yaml
@@ -104,31 +104,31 @@
             - service: homeassistant.toggle
               entity_id: "light.upbath_light_27"
 
-
       - obj: "p1b4" # switch, checkbox or btn with toggle true
         properties:
-          "val": '{{ 1 if is_state("switch.alastairs_bedroom_leds", "on") else 0 }}'
-          "text": '{{ "\uF2BA Ally\nLEDs" if is_state("switch.alastairs_bedroom_leds", "on") else "\uF2BA Ally\nLEDs" | e }}'
+          "val": '{{ 1 if is_state("light.all_lights", "on") else 0 }}'
+          "text": '{{ "Anything" if is_state("light.all_lights", "on") else "Everything" | e }}'
         event:
           "down":
             - service: homeassistant.toggle
-              entity_id: "switch.alastairs_bedroom_leds"
+              entity_id: "light.all_lights"
+
       - obj: "p1b5" # switch, checkbox or btn with toggle true
         properties:
-          "val": '{{ 1 if is_state("light.the_best_light", "on") else 0 }}'
-          "text": '{{ "\uE769 Ally\nBedroom" if is_state("light.the_best_light", "on") else "\uE769 Ally\nBedroom" | e }}'
+          "val": '{{ 1 if is_state("switch.unused", "on") else 0 }}'
+          "text": '{{ "Unused" if is_state("switch.unused", "on") else "Unused" | e }}'
         event:
           "down":
             - service: homeassistant.toggle
-              entity_id: "light.the_best_light"
+              entity_id: "switch.unused"
       - obj: "p1b6" # switch, checkbox or btn with toggle true
         properties:
-          "val": '{{ 1 if is_state("switch.alastairs_office", "on") else 0 }}'
-          "text": '{{ "\uE95F Ally\nOffice" if is_state("switch.alastairs_office", "on") else "\uE95F Ally\nOffice" | e }}'
+          "val": '{{ 1 if is_state("switch.unused", "on") else 0 }}'
+          "text": '{{ "Unused" if is_state("switch.unused", "on") else "Unused" | e }}'
         event:
           "down":
             - service: homeassistant.toggle
-              entity_id: "switch.alastairs_office"
+              entity_id: "switch.unused"
 
 # Beginning of Alarm Panel
       - obj: "p12b1"          # Alarm Arm Home
